[Draft] test pod template in code
  Switch jenkinsfile to use k8s template instead of pod in jenkins config